# kv-store

./: .gitignore  CMakeLists.txt  README.md  design.md  kv_store.cpp  kv_store.h  main.cpp  test_kv_store.cpp
docs/: wal_format.md
include/: crc32.h  kv_store.h  status.h  wal.h  wal_parser.h  wal_record.h  wal_serializer.h
src/: crc32.cpp  kv_store.cpp  main.cpp  wal.cpp  wal_parser.cpp  wal_record.cpp  wal_serializer.cpp
tests/: test_crc32.cpp  test_kv_store.cpp  test_kv_store.h  test_wal.cpp
